[gd_scene load_steps=6 format=3 uid="uid://d3g3gio862g2"]

[ext_resource type="Texture2D" uid="uid://dpi2rnkhn8coc" path="res://kirbySprites/enemy/icecube.png" id="1_myr82"]
[ext_resource type="Script" path="res://projectile scenes/icecube.gd" id="1_s2whx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdele"]
size = Vector2(20, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0aobo"]
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xt601"]
size = Vector2(24, 12)

[node name="icecube" type="CharacterBody2D"]
floor_stop_on_slope = false
floor_constant_speed = true
script = ExtResource("1_s2whx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(57, 0.499998)
rotation = 3.14159
shape = SubResource("RectangleShape2D_sdele")
one_way_collision = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(57, 1.91927e-05)
scale = Vector2(1.08334, 1.08334)
texture = ExtResource("1_myr82")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(57, -1)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(57, 0)
shape = SubResource("RectangleShape2D_0aobo")

[node name="walldetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="walldetect"]
position = Vector2(57, 0)
shape = SubResource("RectangleShape2D_xt601")
debug_color = Color(0.721569, 0.831373, 0.0470588, 0.419608)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="walldetect" to="." method="_on_walldetect_body_entered"]
